@@ -1,6 +1,15 @@
 package us.calubrecht.lazerwiki.controller;
 
 import jakarta.servlet.http.HttpServletRequest;
+import java.io.IOException;
+import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URL;
+import java.net.URLConnection;
+import java.security.Principal;
+import java.time.Duration;
+import java.util.List;
+import java.util.Map;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -19,89 +28,112 @@ import us.calubrecht.lazerwiki.service.MediaService;
 import us.calubrecht.lazerwiki.service.exception.MediaReadException;
 import us.calubrecht.lazerwiki.service.exception.MediaWriteException;
 
-import java.io.IOException;
-import java.net.MalformedURLException;
-import java.net.URL;
-import java.net.URLConnection;
-import java.security.Principal;
-import java.time.Duration;
-import java.util.List;
-import java.util.Map;
-
 @RestController
 @RequestMapping("_media/")
 public class MediaController {
-    final Logger logger = LoggerFactory.getLogger(getClass());
+  final Logger logger = LoggerFactory.getLogger(getClass());
 
-    @Autowired
-    MediaService mediaService;
+  @Autowired MediaService mediaService;
 
-    @GetMapping("{fileName}")
-    public ResponseEntity<byte[]> getFile(@PathVariable String fileName, @RequestParam Map<String,String> requestParams, Principal principal, HttpServletRequest request) {
-        try {
-            URL url = new URL(request.getRequestURL().toString());
-            String size = requestParams.keySet().stream().findAny().orElse(null);
-            String userName = principal == null ? null : principal.getName();
-            String mimeType = URLConnection.guessContentTypeFromName(fileName);
-            MediaType mediaType = mimeType != null ? MediaType.parseMediaType(mimeType) : MediaType.APPLICATION_OCTET_STREAM;
-            return ResponseEntity.ok().contentType(mediaType)
-                    .cacheControl(CacheControl.maxAge(Duration.ofDays(10)).mustRevalidate())
-                    .lastModified(mediaService.getFileLastModified(url.getHost(), fileName))
-                    .body(mediaService.getBinaryFile(url.getHost(), userName, fileName, size));
-        } catch (IOException e) {
-            return ResponseEntity.notFound().build();
-        } catch (MediaReadException | MediaWriteException e) {
-            return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
-        }
+  @GetMapping("{fileName}")
+  public ResponseEntity<byte[]> getFile(
+      @PathVariable String fileName,
+      @RequestParam Map<String, String> requestParams,
+      Principal principal,
+      HttpServletRequest request) {
+    try {
+      URL url = URI.create(request.getRequestURL().toString()).toURL();
+      String size = requestParams.keySet().stream().findAny().orElse(null);
+      String userName = principal == null ? null : principal.getName();
+      String mimeType = URLConnection.guessContentTypeFromName(fileName);
+      MediaType mediaType =
+          mimeType != null
+              ? MediaType.parseMediaType(mimeType)
+              : MediaType.APPLICATION_OCTET_STREAM;
+      return ResponseEntity.ok()
+          .contentType(mediaType)
+          .cacheControl(CacheControl.maxAge(Duration.ofDays(10)).mustRevalidate())
+          .header("Content-Disposition", "attachment; filename=" + fileName)
+          .header("X-Content-Type-Options", "nosniff")
+          .lastModified(mediaService.getFileLastModified(url.getHost(), fileName))
+          .body(mediaService.getBinaryFile(url.getHost(), userName, fileName, size));
+    } catch (IOException e) {
+      return ResponseEntity.notFound().build();
+    } catch (MediaReadException | MediaWriteException e) {
+      return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
     }
+  }
 
-    @PostMapping("upload")
-    public ResponseEntity<String> saveFile(@RequestParam("file") MultipartFile file, @RequestParam("namespace") String namespace, Principal principal, HttpServletRequest request) throws IOException {
-        try {
-            URL url = new URL(request.getRequestURL().toString());
-            String userName = principal.getName();
-            mediaService.saveFile(url.getHost(), userName, file, namespace);
-            return ResponseEntity.ok("Upload successful");
-        } catch (MediaWriteException | MediaReadException e) {
-            logger.error("Upload failed because: " +e.getMessage());
-            return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
-        }
+  @PostMapping("upload")
+  public ResponseEntity<String> saveFile(
+      @RequestParam("file") MultipartFile file,
+      @RequestParam("namespace") String namespace,
+      Principal principal,
+      HttpServletRequest request)
+      throws IOException {
+    try {
+      URL url = URI.create(request.getRequestURL().toString()).toURL();
+      String userName = principal.getName();
+      String mimeType = URLConnection.guessContentTypeFromName(file.getOriginalFilename());
+      if (!mimeType.startsWith("image/")) {
+        logger.error("Upload failed invalidMimeType: {} {}", mimeType, file.getOriginalFilename());
+        return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
+      }
+      mediaService.saveFile(url.getHost(), userName, file, namespace);
+      return ResponseEntity.ok("Upload successful");
+    } catch (MediaWriteException | MediaReadException e) {
+      logger.error("Upload failed because: " + e.getMessage());
+      return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
     }
+  }
 
-    @PostMapping(value = "moveFile")
-    public ResponseEntity<MoveStatus> moveFile(Principal principal, HttpServletRequest request, @RequestBody MoveFileRequest moveFileRequest) throws MalformedURLException {
-        URL url = new URL(request.getRequestURL().toString());
-        String userName = principal.getName();
-        try {
-            return ResponseEntity.ok(mediaService.moveImage(url.getHost(), userName, moveFileRequest.oldNS(), moveFileRequest.oldFile(), moveFileRequest.newNS(), moveFileRequest.newFile()));
-        } catch (MediaWriteException | MediaReadException | IOException e) {
-            return ResponseEntity.ok(new MoveStatus(false, e.getMessage()));
-        }
+  @PostMapping(value = "moveFile")
+  public ResponseEntity<MoveStatus> moveFile(
+      Principal principal, HttpServletRequest request, @RequestBody MoveFileRequest moveFileRequest)
+      throws MalformedURLException {
+    URL url = URI.create(request.getRequestURL().toString()).toURL();
+    String userName = principal.getName();
+    try {
+      return ResponseEntity.ok(
+          mediaService.moveImage(
+              url.getHost(),
+              userName,
+              moveFileRequest.oldNS(),
+              moveFileRequest.oldFile(),
+              moveFileRequest.newNS(),
+              moveFileRequest.newFile()));
+    } catch (MediaWriteException | MediaReadException | IOException e) {
+      return ResponseEntity.ok(new MoveStatus(false, e.getMessage()));
     }
+  }
 
-    @GetMapping("list")
-    MediaListResponse listFiles(Principal principal, HttpServletRequest request) throws MalformedURLException {
-        URL url = new URL(request.getRequestURL().toString());
-        String userName = principal == null ? null : principal.getName();
-        return mediaService.getAllFiles(url.getHost(), userName);
-    }
+  @GetMapping("list")
+  MediaListResponse listFiles(Principal principal, HttpServletRequest request)
+      throws MalformedURLException {
+    URL url = URI.create(request.getRequestURL().toString()).toURL();
+    String userName = principal == null ? null : principal.getName();
+    return mediaService.getAllFiles(url.getHost(), userName);
+  }
 
-    @DeleteMapping("{fileName}")
-    public ResponseEntity<Void> deleteFile(@PathVariable String fileName, Principal principal, HttpServletRequest request) throws IOException {
-        URL url = new URL(request.getRequestURL().toString());
-        String userName = principal.getName();
-        try {
-            mediaService.deleteFile(url.getHost(), fileName, userName);
-            return ResponseEntity.ok().build();
-        } catch (MediaWriteException | MediaReadException e) {
-            return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
-        }
+  @DeleteMapping("{fileName}")
+  public ResponseEntity<Void> deleteFile(
+      @PathVariable String fileName, Principal principal, HttpServletRequest request)
+      throws IOException {
+    URL url = URI.create(request.getRequestURL().toString()).toURL();
+    String userName = principal.getName();
+    try {
+      mediaService.deleteFile(url.getHost(), fileName, userName);
+      return ResponseEntity.ok().build();
+    } catch (MediaWriteException | MediaReadException e) {
+      return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
     }
+  }
 
-    @RequestMapping(value = "/recentChanges")
-    public List<MediaHistoryRecord> recentChanges(Principal principal, HttpServletRequest request) throws MalformedURLException {
-        URL url = new URL(request.getRequestURL().toString());
-        String userName = principal == null ? User.GUEST : principal.getName();
-        return mediaService.getRecentChanges(url.getHost(), userName);
-    }
+  @RequestMapping(value = "/recentChanges")
+  public List<MediaHistoryRecord> recentChanges(Principal principal, HttpServletRequest request)
+      throws MalformedURLException {
+    URL url = URI.create(request.getRequestURL().toString()).toURL();
+    String userName = principal == null ? User.GUEST : principal.getName();
+    return mediaService.getRecentChanges(url.getHost(), userName);
+  }
 }
